--- a/studies-simplifying-access-co360/assets/css/ssa-front.css
+++ b/studies-simplifying-access-co360/assets/css/ssa-front.css
@@ -67,7 +67,19 @@
   color: #166534;
 }
 
+.co360-ssa-notice.success {
+  background: #ecfdf3;
+  border-color: #b7ebc6;
+  color: #166534;
+}
+
 .co360-ssa-notice--error {
+  background: #fff1f1;
+  border-color: #f0b4b4;
+  color: #b32d2e;
+}
+
+.co360-ssa-notice.error {
   background: #fff1f1;
   border-color: #f0b4b4;
   color: #b32d2e;
